Bug de 401 na hora do login/register resolvido.